src/lab3/parser/generated/HTMLHighlightingParser.java
// Generated from java-escape by ANTLR 4.11.1
package lab3.parser.generated;

    import lab3.resources.Tools;

import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
	import org.antlr.v4.runtime.tree.*;
import java.util.List;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast", "CheckReturnValue"})
public class HTMLHighlightingParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.11.1", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__0=1, T__1=2, T__2=3, T__3=4, T__4=5, T__5=6, T__6=7, T__7=8, T__8=9, 
		T__9=10, BREAK=11, CASE=12, DEFAULT=13, SWITCH=14, RETURN=15, CLASS=16, 
		IMPLEMENTS=17, EXTENDS=18, FOR=19, IF=20, ELSE=21, THROWS=22, AT=23, NEW=24, 
		ASSIGN=25, NULL=26, INT=27, FLOAT=28, STRING=29, CHAR=30, BOOLEAN=31, 
		TRUE=32, FALSE=33, BINARY_OPERATOR=34, PLUS=35, MINUS=36, MULTIPLY=37, 
		DIVIDE=38, MOD=39, AND=40, OR=41, NOT=42, EQUAL=43, NOT_EQUAL=44, LESS=45, 
		LESS_OR_EQUAL=46, MORE_=47, MORE_OR_EQUAL=48, UNARY_OPERATOR=49, MODIFIER=50, 
		PUBLIC=51, PRIVATE=52, FINAL=53, STATIC=54, VOLATILE=55, TRANSIENT=56, 
		SYNCHRONIZED=57, NATIVE=58, ABSTRACT=59, PROTECTED=60, INT_TYPE=61, FLOAT_TYPE=62, 
		CHAR_TYPE=63, BOOLEAN_TYPE=64, VOID_TYPE=65, NAME=66, WS=67;
	public static final int
		RULE_start = 0, RULE_nameType = 1, RULE_typeVar = 2, RULE_primitiveValue = 3, 
		RULE_primitiveType = 4, RULE_value = 5, RULE_term = 6, RULE_declareVar = 7, 
		RULE_declareField = 8, RULE_assignVar = 9, RULE_callMethod = 10, RULE_function = 11, 
		RULE_annotation = 12, RULE_arg = 13, RULE_exeptions = 14, RULE_bodyFunction = 15, 
		RULE_returnFunction = 16, RULE_class = 17, RULE_implements = 18, RULE_exstends = 19, 
		RULE_constructor = 20, RULE_bodyClass = 21, RULE_castStatement = 22, RULE_ifStatement = 23, 
		RULE_elseStatement = 24, RULE_forStatement = 25, RULE_switchStatement = 26, 
		RULE_caseStatement = 27, RULE_defaultStatement = 28;
	private static String[] makeRuleNames() {
		return new String[] {
			"start", "nameType", "typeVar", "primitiveValue", "primitiveType", "value", 
			"term", "declareVar", "declareField", "assignVar", "callMethod", "function", 
			"annotation", "arg", "exeptions", "bodyFunction", "returnFunction", "class", 
			"implements", "exstends", "constructor", "bodyClass", "castStatement", 
			"ifStatement", "elseStatement", "forStatement", "switchStatement", "caseStatement", 
			"defaultStatement"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "'.'", "'['", "']'", "'{'", "','", "'}'", "';'", "'('", "')'", 
			"':'", "'break'", "'case'", "'default'", "'switch'", "'return'", "'class'", 
			"'implements'", "'extends'", "'for'", "'if'", "'else'", "'throws'", "'@'", 
			"'new'", "'='", "'null'", null, null, null, null, null, "'true'", "'false'", 
			null, "'+'", "'-'", "'*'", "'/'", "'%'", "'&&'", "'||'", "'!'", "'=='", 
			"'!='", "'<'", "'<='", "'>'", "'>='", null, null, "'public'", "'private'", 
			"'final'", "'static'", "'volatile'", "'transient'", "'synchronized'", 
			"'native'", "'abstract'", "'protected'", "'int'", "'float'", "'char'", 
			"'boolean'", "'void'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, null, null, null, null, null, null, null, null, null, null, "BREAK", 
			"CASE", "DEFAULT", "SWITCH", "RETURN", "CLASS", "IMPLEMENTS", "EXTENDS", 
			"FOR", "IF", "ELSE", "THROWS", "AT", "NEW", "ASSIGN", "NULL", "INT", 
			"FLOAT", "STRING", "CHAR", "BOOLEAN", "TRUE", "FALSE", "BINARY_OPERATOR", 
			"PLUS", "MINUS", "MULTIPLY", "DIVIDE", "MOD", "AND", "OR", "NOT", "EQUAL", 
			"NOT_EQUAL", "LESS", "LESS_OR_EQUAL", "MORE_", "MORE_OR_EQUAL", "UNARY_OPERATOR", 
			"MODIFIER", "PUBLIC", "PRIVATE", "FINAL", "STATIC", "VOLATILE", "TRANSIENT", 
			"SYNCHRONIZED", "NATIVE", "ABSTRACT", "PROTECTED", "INT_TYPE", "FLOAT_TYPE", 
			"CHAR_TYPE", "BOOLEAN_TYPE", "VOID_TYPE", "NAME", "WS"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "java-escape"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public HTMLHighlightingParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	@SuppressWarnings("CheckReturnValue")
	public static class StartContext extends ParserRuleContext {
		public String val;
		public ClassContext class_() {
			return getRuleContext(ClassContext.class,0);
		}
		public StartContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_start; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof HTMLHighlightingListener ) ((HTMLHighlightingListener)listener).enterStart(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof HTMLHighlightingListener ) ((HTMLHighlightingListener)listener).exitStart(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof HTMLHighlightingVisitor ) return ((HTMLHighlightingVisitor<? extends T>)visitor).visitStart(this);
			else return visitor.visitChildren(this);
		}
	}

	public final StartContext start() throws RecognitionException {
		StartContext _localctx = new StartContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_start);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(58);
			class_();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class NameTypeContext extends ParserRuleContext {
		public String val;
		public PrimitiveTypeContext primitiveType() {
			return getRuleContext(PrimitiveTypeContext.class,0);
		}
		public List<TerminalNode> NAME() { return getTokens(HTMLHighlightingParser.NAME); }
		public TerminalNode NAME(int i) {
			return getToken(HTMLHighlightingParser.NAME, i);
		}
		public NameTypeContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_nameType; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof HTMLHighlightingListener ) ((HTMLHighlightingListener)listener).enterNameType(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof HTMLHighlightingListener ) ((HTMLHighlightingListener)listener).exitNameType(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof HTMLHighlightingVisitor ) return ((HTMLHighlightingVisitor<? extends T>)visitor).visitNameType(this);
			else return visitor.visitChildren(this);
		}
	}

	public final NameTypeContext nameType() throws RecognitionException {
		NameTypeContext _localctx = new NameTypeContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_nameType);
		try {
			int _alt;
			setState(70);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,1,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(60);
				primitiveType();
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(61);
				if (!( Tools.isNotReservedWord(_input.LT(1).getText()) )) throw new FailedPredicateException(this, " Tools.isNotReservedWord(_input.LT(1).getText()) ");
				setState(62);
				match(NAME);
				setState(67);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,0,_ctx);
				while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
					if ( _alt==1 ) {
						{
						{
						{
						setState(63);
						match(T__0);
						}
						setState(64);
						match(NAME);
						}
						} 
					}
					setState(69);
					_errHandler.sync(this);
					_alt = getInterpreter().adaptivePredict(_input,0,_ctx);
				}
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class TypeVarContext extends ParserRuleContext {
		public String val;
		public NameTypeContext nameType() {
			return getRuleContext(NameTypeContext.class,0);
		}
		public TerminalNode LESS() { return getToken(HTMLHighlightingParser.LESS, 0); }
		public TypeVarContext typeVar() {
			return getRuleContext(TypeVarContext.class,0);
		}
		public TerminalNode MORE_() { return getToken(HTMLHighlightingParser.MORE_, 0); }
		public ValueContext value() {
			return getRuleContext(ValueContext.class,0);
		}
		public TypeVarContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_typeVar; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof HTMLHighlightingListener ) ((HTMLHighlightingListener)listener).enterTypeVar(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof HTMLHighlightingListener ) ((HTMLHighlightingListener)listener).exitTypeVar(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof HTMLHighlightingVisitor ) return ((HTMLHighlightingVisitor<? extends T>)visitor).visitTypeVar(this);
			else return visitor.visitChildren(this);
		}
	}

	public final TypeVarContext typeVar() throws RecognitionException {
		return typeVar(0);
	}

	private TypeVarContext typeVar(int _p) throws RecognitionException {
		ParserRuleContext _parentctx = _ctx;
		int _parentState = getState();
		TypeVarContext _localctx = new TypeVarContext(_ctx, _parentState);
		TypeVarContext _prevctx = _localctx;
		int _startState = 4;
		enterRecursionRule(_localctx, 4, RULE_typeVar, _p);
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(79);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,2,_ctx) ) {
			case 1:
				{
				setState(73);
				nameType();
				}
				break;
			case 2:
				{
				setState(74);
				nameType();
				setState(75);
				match(LESS);
				setState(76);
				typeVar(0);
				setState(77);
				match(MORE_);
				}
				break;
			}
			_ctx.stop = _input.LT(-1);
			setState(89);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,4,_ctx);
			while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					if ( _parseListeners!=null ) triggerExitRuleEvent();
					_prevctx = _localctx;
					{
					{
					_localctx = new TypeVarContext(_parentctx, _parentState);
					pushNewRecursionContext(_localctx, _startState, RULE_typeVar);
					setState(81);
					if (!(precpred(_ctx, 1))) throw new FailedPredicateException(this, "precpred(_ctx, 1)");
					setState(82);
					match(T__1);
					setState(84);
					_errHandler.sync(this);
					switch ( getInterpreter().adaptivePredict(_input,3,_ctx) ) {
					case 1:
						{
						setState(83);
						value();
						}
						break;
					}
					setState(86);
					match(T__2);
					}
					} 
				}
				setState(91);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,4,_ctx);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			unrollRecursionContexts(_parentctx);
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class PrimitiveValueContext extends ParserRuleContext {
		public String val;
		public TerminalNode INT() { return getToken(HTMLHighlightingParser.INT, 0); }
		public TerminalNode FLOAT() { return getToken(HTMLHighlightingParser.FLOAT, 0); }
		public TerminalNode STRING() { return getToken(HTMLHighlightingParser.STRING, 0); }
		public TerminalNode CHAR() { return getToken(HTMLHighlightingParser.CHAR, 0); }
		public TerminalNode BOOLEAN() { return getToken(HTMLHighlightingParser.BOOLEAN, 0); }
		public TerminalNode NULL() { return getToken(HTMLHighlightingParser.NULL, 0); }
		public PrimitiveValueContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_primitiveValue; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof HTMLHighlightingListener ) ((HTMLHighlightingListener)listener).enterPrimitiveValue(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof HTMLHighlightingListener ) ((HTMLHighlightingListener)listener).exitPrimitiveValue(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof HTMLHighlightingVisitor ) return ((HTMLHighlightingVisitor<? extends T>)visitor).visitPrimitiveValue(this);
			else return visitor.visitChildren(this);
		}
	}

	public final PrimitiveValueContext primitiveValue() throws RecognitionException {
		PrimitiveValueContext _localctx = new PrimitiveValueContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_primitiveValue);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(92);
			_la = _input.LA(1);
			if ( !(((_la) & ~0x3f) == 0 && ((1L << _la) & 4227858432L) != 0) ) {
			_errHandler.recoverInline(this);
			}
			else {
				if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
				_errHandler.reportMatch(this);
				consume();
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class PrimitiveTypeContext extends ParserRuleContext {
		public String val;
		public TerminalNode INT_TYPE() { return getToken(HTMLHighlightingParser.INT_TYPE, 0); }
		public TerminalNode FLOAT_TYPE() { return getToken(HTMLHighlightingParser.FLOAT_TYPE, 0); }
		public TerminalNode CHAR_TYPE() { return getToken(HTMLHighlightingParser.CHAR_TYPE, 0); }
		public TerminalNode BOOLEAN_TYPE() { return getToken(HTMLHighlightingParser.BOOLEAN_TYPE, 0); }
		public TerminalNode VOID_TYPE() { return getToken(HTMLHighlightingParser.VOID_TYPE, 0); }
		public PrimitiveTypeContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_primitiveType; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof HTMLHighlightingListener ) ((HTMLHighlightingListener)listener).enterPrimitiveType(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof HTMLHighlightingListener ) ((HTMLHighlightingListener)listener).exitPrimitiveType(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof HTMLHighlightingVisitor ) return ((HTMLHighlightingVisitor<? extends T>)visitor).visitPrimitiveType(this);
			else return visitor.visitChildren(this);
		}
	}

	public final PrimitiveTypeContext primitiveType() throws RecognitionException {
		PrimitiveTypeContext _localctx = new PrimitiveTypeContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_primitiveType);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(94);
			_la = _input.LA(1);
			if ( !((((_la - 61)) & ~0x3f) == 0 && ((1L << (_la - 61)) & 31L) != 0) ) {
			_errHandler.recoverInline(this);
			}
			else {
				if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
				_errHandler.reportMatch(this);
				consume();
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ValueContext extends ParserRuleContext {
		public String val;
		public PrimitiveValueContext primitiveValue() {
			return getRuleContext(PrimitiveValueContext.class,0);
		}
		public CallMethodContext callMethod() {
			return getRuleContext(CallMethodContext.class,0);
		}
		public TerminalNode NEW() { return getToken(HTMLHighlightingParser.NEW, 0); }
		public TypeVarContext typeVar() {
			return getRuleContext(TypeVarContext.class,0);
		}
		public List<ValueContext> value() {
			return getRuleContexts(ValueContext.class);
		}
		public ValueContext value(int i) {
			return getRuleContext(ValueContext.class,i);
		}
		public NameTypeContext nameType() {
			return getRuleContext(NameTypeContext.class,0);
		}
		public ValueContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_value; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof HTMLHighlightingListener ) ((HTMLHighlightingListener)listener).enterValue(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof HTMLHighlightingListener ) ((HTMLHighlightingListener)listener).exitValue(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof HTMLHighlightingVisitor ) return ((HTMLHighlightingVisitor<? extends T>)visitor).visitValue(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ValueContext value() throws RecognitionException {
		ValueContext _localctx = new ValueContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_value);
		int _la;
		try {
			int _alt;
			setState(132);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,10,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(96);
				primitiveValue();
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(97);
				callMethod();
				}
				break;
			case 3:
				enterOuterAlt(_localctx, 3);
				{
				setState(98);
				match(NEW);
				setState(100);
				_errHandler.sync(this);
				switch ( getInterpreter().adaptivePredict(_input,5,_ctx) ) {
				case 1:
					{
					setState(99);
					typeVar(0);
					}
					break;
				}
				setState(103);
				_errHandler.sync(this);
				switch ( getInterpreter().adaptivePredict(_input,6,_ctx) ) {
				case 1:
					{
					setState(102);
					value();
					}
					break;
				}
				}
				break;
			case 4:
				enterOuterAlt(_localctx, 4);
				{
				setState(105);
				callMethod();
				setState(110);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,7,_ctx);
				while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
					if ( _alt==1 ) {
						{
						{
						setState(106);
						match(T__0);
						setState(107);
						value();
						}
						} 
					}
					setState(112);
					_errHandler.sync(this);
					_alt = getInterpreter().adaptivePredict(_input,7,_ctx);
				}
				}
				break;
			case 5:
				enterOuterAlt(_localctx, 5);
				{
				setState(113);
				nameType();
				setState(118);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,8,_ctx);
				while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
					if ( _alt==1 ) {
						{
						{
						setState(114);
						match(T__0);
						setState(115);
						value();
						}
						} 
					}
					setState(120);
					_errHandler.sync(this);
					_alt = getInterpreter().adaptivePredict(_input,8,_ctx);
				}
				}
				break;
			case 6:
				enterOuterAlt(_localctx, 6);
				{
				setState(121);
				match(T__3);
				setState(122);
				value();
				setState(127);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while (_la==T__4) {
					{
					{
					setState(123);
					match(T__4);
					setState(124);
					value();
					}
					}
					setState(129);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				setState(130);
				match(T__5);
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class TermContext extends ParserRuleContext {
		public String val;
		public TerminalNode UNARY_OPERATOR() { return getToken(HTMLHighlightingParser.UNARY_OPERATOR, 0); }
		public List<TermContext> term() {
			return getRuleContexts(TermContext.class);
		}
		public TermContext term(int i) {
			return getRuleContext(TermContext.class,i);
		}
		public ValueContext value() {
			return getRuleContext(ValueContext.class,0);
		}
		public TerminalNode BINARY_OPERATOR() { return getToken(HTMLHighlightingParser.BINARY_OPERATOR, 0); }
		public TermContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_term; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof HTMLHighlightingListener ) ((HTMLHighlightingListener)listener).enterTerm(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof HTMLHighlightingListener ) ((HTMLHighlightingListener)listener).exitTerm(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof HTMLHighlightingVisitor ) return ((HTMLHighlightingVisitor<? extends T>)visitor).visitTerm(this);
			else return visitor.visitChildren(this);
		}
	}

	public final TermContext term() throws RecognitionException {
		return term(0);
	}

	private TermContext term(int _p) throws RecognitionException {
		ParserRuleContext _parentctx = _ctx;
		int _parentState = getState();
		TermContext _localctx = new TermContext(_ctx, _parentState);
		TermContext _prevctx = _localctx;
		int _startState = 12;
		enterRecursionRule(_localctx, 12, RULE_term, _p);
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(138);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,11,_ctx) ) {
			case 1:
				{
				setState(135);
				match(UNARY_OPERATOR);
				setState(136);
				term(3);
				}
				break;
			case 2:
				{
				setState(137);
				value();
				}
				break;
			}
			_ctx.stop = _input.LT(-1);
			setState(147);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,13,_ctx);
			while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					if ( _parseListeners!=null ) triggerExitRuleEvent();
					_prevctx = _localctx;
					{
					setState(145);
					_errHandler.sync(this);
					switch ( getInterpreter().adaptivePredict(_input,12,_ctx) ) {
					case 1:
						{
						_localctx = new TermContext(_parentctx, _parentState);
						pushNewRecursionContext(_localctx, _startState, RULE_term);
						setState(140);
						if (!(precpred(_ctx, 4))) throw new FailedPredicateException(this, "precpred(_ctx, 4)");
						setState(141);
						match(BINARY_OPERATOR);
						setState(142);
						term(5);
						}
						break;
					case 2:
						{
						_localctx = new TermContext(_parentctx, _parentState);
						pushNewRecursionContext(_localctx, _startState, RULE_term);
						setState(143);
						if (!(precpred(_ctx, 2))) throw new FailedPredicateException(this, "precpred(_ctx, 2)");
						setState(144);
						match(UNARY_OPERATOR);
						}
						break;
					}
					} 
				}
				setState(149);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,13,_ctx);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			unrollRecursionContexts(_parentctx);
		}
		return _localctx;
	}
